Updated conf/ files to run smoothly in spark-ec2 clusters. Some files must still be updated dynamically, however.